--- a/app/src/main/res/layout/activity_recipe_list.xml
+++ b/app/src/main/res/layout/activity_recipe_list.xml
@@ -8,9 +8,13 @@
     tools:context=".RecipeListActivity">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/linearLayout"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -21,54 +25,67 @@
             <!-- Back Button -->
             <ImageButton
                 android:id="@+id/backButton"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="55dp"
+                android:layout_height="55dp"
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="5dp"
-                android:src="@drawable/back_arrow"
                 android:background="@drawable/back_circle"
-                android:contentDescription="Back" />
+                android:contentDescription="Back"
+                android:src="@drawable/back_arrow" />
 
         </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
             android:background="#CDCEFF"
+            android:gravity="center"
+            android:orientation="horizontal"
             android:padding="8dp">
 
             <!-- Menu Button -->
             <ImageButton
                 android:id="@+id/menuButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-            <!--android:src="@drawable/ic_menu" <!-- Replace with your menu icon -->
-            <!--android:background="@android:color/transparent"
-            <!--android:contentDescription="Menu" -->/>
+                android:layout_width="62dp"
+                android:layout_height="50dp"
+                android:background="@android:color/transparent"
+                android:contentDescription="Menu"
+                android:src="@drawable/menu_icon" />
 
             <!-- All Filters Button -->
             <Button
                 android:id="@+id/allFiltersButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="All Filters"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 android:backgroundTint="#5D467A"
-                android:textColor="#FFFFFF"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="8dp" />
+                android:text="All Filters"
+                android:textColor="#FFFFFF" />
 
             <!-- See/Add Ingredients Button -->
             <Button
                 android:id="@+id/seeAddIngredientsButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="See/Add Ingredients"
                 android:backgroundTint="#5D467A"
+                android:text="See/Add Ingredients"
                 android:textColor="#FFFFFF" />
         </LinearLayout>
 
     </LinearLayout>
+
+    <!--
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recipeRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:padding="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        tools:layout_editor_absoluteX="-16dp" />
+        -->
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
