--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             android:id="@+id/titleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Fridge Finder"
+            android:text="@string/app_title"
             android:textColor="@android:color/black"
             android:textSize="48sp"
             android:textStyle="bold"
@@ -31,21 +31,22 @@
             android:layout_below="@id/titleTextView"
             android:layout_marginTop="80dp"
             android:backgroundTint="#D3D3D3"
-            android:text="Saved Recipes"
+            android:text="@string/saved_recipes"
             android:textColor="@android:color/black"
             android:layout_centerHorizontal="true"/>
 
         <ImageButton
             android:id="@+id/cameraButton"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
             android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
             android:layout_marginBottom="120dp"
-            android:background="@android:color/transparent"
-            android:backgroundTint="#D3D3D3"
+            android:background="@drawable/circular_button_background"
+            android:contentDescription="@string/scan_your_fridge"
+            android:padding="12dp"
             android:scaleType="fitCenter"
-            android:src="@android:drawable/ic_menu_camera"
-            android:layout_centerHorizontal="true"/>
+            android:src="@drawable/ic_camera" />
 
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
