--- a/app/src/main/res/layout/activity_scan_camera.xml
+++ b/app/src/main/res/layout/activity_scan_camera.xml
@@ -7,49 +7,54 @@
     android:layout_height="match_parent"
     tools:context=".ScanCameraActivity">
 
-    <LinearLayout
-        android:layout_width="409dp"
-        android:layout_height="729dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp">
+    <TextureView
+        android:id="@+id/textureView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-        <TextureView
-            android:id="@+id/textureView"
-            android:layout_width="match_parent"
-            android:layout_height="548dp" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#80000000"
+        android:paddingVertical="16dp"
+        android:paddingHorizontal="36dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="32dp">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="107dp"
-            android:background="#CDCEFF"
-            android:paddingLeft="16dp"
-            android:paddingTop="8dp"
-            android:paddingRight="16dp"
-            android:paddingBottom="8dp">
+        <TextView
+            android:id="@+id/numPhotosLeft"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true"
+            android:text="@string/num_photos_left"
+            android:textSize="22sp"
+            android:textColor="#ddd"
+            android:shadowColor="#666"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:shadowRadius="2"
+            tools:ignore="RelativeOverlap" />
 
-            <ImageButton
-                android:id="@+id/doneButton"
-                android:layout_width="55dp"
-                android:layout_height="55dp"
-                android:layout_alignParentEnd="true"
-                android:contentDescription="Bookmark"
-                android:src="@drawable/done_icon"
-                android:layout_centerVertical="true"
-                android:background="@drawable/back_circle"/>
+        <ImageButton
+            android:id="@+id/cameraButton"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:layout_centerInParent="true"
+            android:background="@drawable/circular_button_background"
+            android:contentDescription="@string/scan_your_fridge"
+            android:padding="16dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_camera" />
 
-            <ImageButton
-                android:id="@+id/cameraButton"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_alignParentBottom="true"
-                android:background="@android:color/transparent"
-                android:backgroundTint="#D3D3D3"
-                android:scaleType="fitCenter"
-                android:src="@android:drawable/ic_menu_camera"
-                android:layout_centerHorizontal="true"/>
-
-        </RelativeLayout>
-
-    </LinearLayout>
+        <ImageButton
+            android:id="@+id/doneButton"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:contentDescription="@string/done_scanning"
+            android:src="@drawable/done_icon"
+            android:background="@drawable/back_circle"/>
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
