--- a/app/src/main/res/layout/activity_scan_camera.xml
+++ b/app/src/main/res/layout/activity_scan_camera.xml
@@ -9,32 +9,46 @@
 
     <androidx.camera.view.PreviewView
         android:id="@+id/cameraPreview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+    </androidx.camera.view.PreviewView>
+    <TextView
+        android:id="@+id/numPhotosLeft"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#80000000"
-        android:paddingVertical="16dp"
-        android:paddingHorizontal="36dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="32dp">
+        android:shadowColor="#666"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="2"
+        android:text="@string/num_photos_left"
+        android:textColor="#ddd"
+        android:textSize="22sp" />
 
-        <TextView
-            android:id="@+id/numPhotosLeft"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:background="#80000000"
+        android:paddingHorizontal="36dp"
+        android:paddingVertical="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageButton
+            android:id="@+id/uploadButton"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
             android:layout_alignParentStart="true"
-            android:text="@string/num_photos_left"
-            android:textSize="22sp"
-            android:textColor="#ddd"
-            android:shadowColor="#666"
-            android:shadowDx="1"
-            android:shadowDy="1"
-            android:shadowRadius="2"
-            tools:ignore="RelativeOverlap" />
+            android:layout_centerVertical="true"
+            android:contentDescription="@string/upload_photo"
+            android:src="@drawable/upload" />
+
 
         <ImageButton
             android:id="@+id/cameraButton"
@@ -53,8 +67,8 @@
             android:layout_height="55dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
+            android:background="@drawable/back_circle"
             android:contentDescription="@string/done_scanning"
-            android:src="@drawable/done_icon"
-            android:background="@drawable/back_circle"/>
+            android:src="@drawable/done_icon" />
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
