--- a/app/src/main/res/layout/activity_recipe_description.xml
+++ b/app/src/main/res/layout/activity_recipe_description.xml
@@ -7,11 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".RecipeDescriptionActivity">
 
-    <!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="16dp">
-    -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -33,6 +28,7 @@
                     android:src="@drawable/back_arrow"
                     android:background="@drawable/back_circle"
                     android:contentDescription="Back"
+                    android:layout_marginBottom="200sp"
                     android:layout_alignParentStart="true" />
 
                 <TextView
@@ -86,14 +82,6 @@
                         android:text="Recipe"
                         android:textSize="24sp"
                         android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/rating"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="4dp"
-                        android:text="★★★★★?"
-                        android:textColor="#5D467A" />
 
                     <TextView
                         android:id="@+id/supportingText"
