--- a/app/src/main/res/layout/activity_saved_recipes.xml
+++ b/app/src/main/res/layout/activity_saved_recipes.xml
@@ -68,4 +68,15 @@
 
     </LinearLayout>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recipeSavedList"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:listitem="@layout/recipe_item" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
