--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
             android:textColor="@android:color/black"
             android:textSize="48sp"
             android:textStyle="bold"
+            android:fontFamily="@font/montserrat_bold"
             android:layout_centerHorizontal="true"
             android:layout_alignParentTop="true"
             android:layout_marginTop="80dp" />
@@ -32,6 +33,7 @@
             android:layout_marginTop="80dp"
             android:backgroundTint="#D3D3D3"
             android:text="@string/saved_recipes"
+            android:fontFamily="@font/montserrat_regular"
             android:textColor="@android:color/black"
             android:layout_centerHorizontal="true"/>
 
