--- a/app/src/main/res/layout/activity_recipe_list.xml
+++ b/app/src/main/res/layout/activity_recipe_list.xml
@@ -6,70 +6,86 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".RecipeListActivity">
 
+    <RelativeLayout
+        android:id="@+id/headerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:background="@color/primary_green"
+        android:padding="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageButton
+            android:id="@+id/backButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@drawable/back_circle"
+            android:contentDescription="Back"
+            android:src="@drawable/back_arrow"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true" />
+
+        <TextView
+            android:id="@+id/headerTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Recipes"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:fontFamily="@font/montserrat_semibold"
+            android:layout_centerInParent="true" />
+
+    </RelativeLayout>
+
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/filterLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="horizontal"
+        android:padding="12dp"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@+id/headerLayout"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/light_gray">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:background="@drawable/recipe_background"
-            android:padding="10dp">
+        <ImageButton
+            android:id="@+id/menuButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@drawable/circular_button_background"
+            android:contentDescription="Menu"
+            android:src="@drawable/menu_icon" />
 
-            <ImageButton
-                android:id="@+id/backButton"
-                android:layout_width="55dp"
-                android:layout_height="55dp"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="5dp"
-                android:background="@drawable/back_circle"
-                android:contentDescription="Back"
-                android:src="@drawable/back_arrow" />
-
-        </RelativeLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/allFiltersButton"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#CDCEFF"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:padding="8dp">
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:backgroundTint="@color/primary_green"
+            android:text="All Filters"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:fontFamily="@font/montserrat_regular"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="8dp" />
 
-            <ImageButton
-                android:id="@+id/menuButton"
-                android:layout_width="62dp"
-                android:layout_height="50dp"
-                android:background="@android:color/transparent"
-                android:contentDescription="Menu"
-                android:src="@drawable/menu_icon" />
-
-            <Button
-                android:id="@+id/allFiltersButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:backgroundTint="#5D467A"
-                android:text="All Filters"
-                android:textColor="#FFFFFF" />
-
-            <Button
-                android:id="@+id/seeAddIngredientsButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#5D467A"
-                android:text="See/Add Ingredients"
-                android:textColor="#FFFFFF" />
-        </LinearLayout>
-
+        <Button
+            android:id="@+id/seeAddIngredientsButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/primary_green"
+            android:text="See/Add Ingredients"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:fontFamily="@font/montserrat_regular"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="8dp" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -77,10 +93,12 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        android:clipToPadding="false"
+        app:layout_constraintTop_toBottomOf="@+id/filterLayout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:listitem="@layout/recipe_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
