--- a/app/src/main/res/layout/activity_saved_recipes.xml
+++ b/app/src/main/res/layout/activity_saved_recipes.xml
@@ -1,71 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".SavedRecipesActivity">
 
+    <RelativeLayout
+        android:id="@+id/headerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:background="@color/primary_green"
+        android:padding="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageButton
+            android:id="@+id/backButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@drawable/back_circle"
+            android:contentDescription="@string/back"
+            android:src="@drawable/back_arrow"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true" />
+
+        <TextView
+            android:id="@+id/headerTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/saved_recipes"
+            android:fontFamily="@font/montserrat_semibold"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
+
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/filterLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="horizontal"
+        android:padding="12dp"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@+id/headerLayout"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/light_gray">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:background="@drawable/recipe_background"
-            android:padding="10dp">
+        <ImageButton
+            android:id="@+id/searchSavedRecipesButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@drawable/back_circle"
+            android:contentDescription="@string/search_saved_recipes"
+            android:src="@drawable/search_icon" />
 
-            <!-- Back Button -->
-            <ImageButton
-                android:id="@+id/backButton"
-                android:layout_width="55dp"
-                android:layout_height="55dp"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="5dp"
-                android:background="@drawable/back_circle"
-                android:contentDescription="@string/back"
-                android:src="@drawable/back_arrow" />
-
-        </RelativeLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/allFiltersButton"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#CDCEFF"
-            android:gravity="start"
-            android:orientation="horizontal"
-            android:padding="8dp">
-
-            <!-- Search Button -->
-            <ImageButton
-                android:id="@+id/searchSavedRecipesButton"
-                android:layout_width="62dp"
-                android:layout_height="50dp"
-                android:scaleX="1.2"
-                android:scaleY="1.2"
-                android:background="@android:color/transparent"
-                android:contentDescription="@string/search_saved_recipes"
-                android:src="@drawable/search_icon" />
-
-            <!-- All Filters Button -->
-            <Button
-                android:id="@+id/allFiltersButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:backgroundTint="#5D467A"
-                android:text="@string/all_filters"
-                android:textColor="#FFFFFF" />
-        </LinearLayout>
-
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:backgroundTint="@color/primary_green"
+            android:text="@string/all_filters"
+            android:fontFamily="@font/montserrat_regular"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="8dp" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -73,10 +80,11 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintTop_toBottomOf="@+id/filterLayout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:listitem="@layout/recipe_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
